Fixed broken style.

--- a/cms/components/questionnaire/css/questionnaire.css
+++ b/cms/components/questionnaire/css/questionnaire.css
@@ -37,7 +37,7 @@ td.question_form_label {
 	text-align: left;
 	vertical-align: top;
 	font-size: 10pt;
-	color: #ooo;
+	color: #000;
 	border-bottom: 0;
 	width: 35%;
 }
